--- a/RC_01.ipynb
+++ b/RC_01.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,12 @@
     }
    ],
    "source": [
-    "#first remove zeros from the beginning of the message if they exist, then check for 7\n",
+    "def remove_first_zeros(input_str:str) -> str:\n",
+    "    if input_str.startswith('0'):\n",
+    "        return input_str.lstrip('0')\n",
+    "    else:\n",
+    "        return input_str\n",
+    "\n",
     "def binary_characters(input_str: str) -> bool:\n",
     "    return all(char == '0' or char == '1' for char in input_str)\n",
     "\n",
@@ -56,6 +61,7 @@
     "    return len(input_str) % 7 == 0 and binary_characters(input_str)\n",
     "\n",
     "message_str: str = '10101110101110'\n",
+    "message_str = remove_first_zeros(message_str)\n",
     "ok: bool = False\n",
     "\n",
     "while not ok:\n",
@@ -77,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -90,14 +96,14 @@
     }
    ],
    "source": [
-    "def convert_input_to_matrix(message: str) -> ndarray:\n",
+    "def convert_input_to_matrix(message: str, columns:int) -> ndarray:\n",
     "    if validate_input(message) is False:\n",
     "        raise ValueError(\"Invalid message length.\")\n",
     "    else:\n",
-    "        mat = np.array(list(message),  dtype=int).reshape(len(message)//7, 7)\n",
+    "        mat = np.array(list(message),  dtype=int).reshape(len(message)//columns, columns)\n",
     "        return mat\n",
     "\n",
-    "message:ndarray = convert_input_to_matrix(message_str)\n",
+    "message:ndarray = convert_input_to_matrix(message_str, 7)\n",
     "print(message)"
    ]
   },
@@ -115,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -129,18 +135,14 @@
     }
    ],
    "source": [
-    "# new line has parity bits\n",
-    "def count_ones(array:ndarray) -> int:\n",
-    "    return np.sum(array == 1)\n",
-    "\n",
-    "def sent_message_matrix(message:ndarray) -> ndarray:\n",
+    "def message_matrix(message:ndarray) -> ndarray:\n",
     "    new_mat = np.zeros((message.shape[0] + 1, message.shape[1] + 1), dtype=int)\n",
     "    new_mat[:-1, :-1] = message\n",
     "    new_mat[-1, :-1] = new_mat[:-1, :-1].sum(axis=0) % 2\n",
     "    new_mat[:, -1] = np.sum(new_mat[:, :-1], axis=1) % 2\n",
     "    return new_mat\n",
     "\n",
-    "n_message:ndarray = sent_message_matrix(message)\n",
+    "n_message:ndarray = message_matrix(message)\n",
     "print(n_message)"
    ]
   },
@@ -153,16 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Corrupted Position: (1, 0)\n",
-      "[[1 0 1 0 1 1 1 1]\n",
-      " [1 1 0 1 1 1 0 0]\n",
+      "Corrupted Position: (0, 5)\n",
+      "[[1 0 1 0 1 0 1 1]\n",
+      " [0 1 0 1 1 1 0 0]\n",
       " [1 1 1 1 0 0 1 1]]\n"
      ]
     }
@@ -180,10 +182,8 @@
     "    \n",
     "    return message\n",
     "\n",
-    "corrupt_message(n_message)\n",
-    "print(n_message)\n",
-    "\n",
-    "#then a function to check a matrix using the parity bits"
+    "corrupted_message = corrupt_message(n_message)\n",
+    "print(corrupted_message)\n"
    ]
   },
   {
@@ -196,10 +196,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1 0 1 1 1 1]\n",
+      " [0 1 0 1 1 1 0 0]\n",
+      " [1 1 1 1 0 0 1 1]]\n",
+      "No corrupted message detected.\n",
+      "\n",
+      "[[1 0 1 0 1 0 1 1]\n",
+      " [0 1 0 1 1 1 0 0]\n",
+      " [1 1 1 1 0 0 1 1]]\n",
+      "Corrupted message detected at position: (0, 5) \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def two_dimensional_parity_check(message: ndarray) -> tuple:\n",
+    "    rows, cols = message.shape\n",
+    "    row_index, col_index = None, None\n",
+    "    \n",
+    "    for row in range(rows - 1): # check for rows\n",
+    "        row_ones = sum(message[row, :cols - 1])  \n",
+    "        if row_ones % 2 != message[row, cols - 1]:  \n",
+    "            row_index = row\n",
+    "            break\n",
+    "    \n",
+    "    for col in range(cols - 1): # check for columns\n",
+    "        col_ones = sum(message[:rows - 1, col]) \n",
+    "        if col_ones % 2 != message[rows - 1, col]: \n",
+    "            col_index = col\n",
+    "            break\n",
+    "    \n",
+    "    return (row_index, col_index) if row_index is not None and col_index is not None else None\n",
+    "\n",
+    "def message_display(message:ndarray) -> None:\n",
+    "    if(two_dimensional_parity_check(message)):\n",
+    "        print(\"Corrupted message detected at position:\", two_dimensional_parity_check(message), \"\\n\")\n",
+    "    else:\n",
+    "        print(\"No corrupted message detected.\\n\")\n",
+    "\n",
+    "print(message_matrix(message))\n",
+    "message_display(message_matrix(message))\n",
+    "print(corrupted_message)\n",
+    "message_display(corrupted_message)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
