XOR operation between extended message and generator polynomial.

--- a/RC_01.ipynb
+++ b/RC_01.ipynb
@@ -4,23 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# *Retele de calculatoare - Tema 1*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " # **Biti de paritate bidimensionala**"
+    " # **Two-Dimensional Parity Checking**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
     "import numpy as np\n",
     "from numpy import ndarray\n",
     "import random"
@@ -30,12 +22,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.\tSe introduce de la tastatura un sir format dintr-un numar multiplu de 7 caractere binare (Se vor face verificari in acest sens). "
+    "Input (from keyboard) will be a string containing binary characters (input will be validated, and the length of the string must be a multiple of 7)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -55,12 +47,13 @@
     "        return input_str\n",
     "\n",
     "def binary_characters(input_str: str) -> bool:\n",
-    "    return all(char == '0' or char == '1' for char in input_str)\n",
+    "    return all(char in '01' for char in input_str)\n",
     "\n",
     "def validate_input(input_str: str) -> bool:\n",
     "    return len(input_str) % 7 == 0 and binary_characters(input_str)\n",
     "\n",
     "message_str: str = '10101110101110'\n",
+    "#message_str = input(\"Enter message:\")\n",
     "message_str = remove_first_zeros(message_str)\n",
     "ok: bool = False\n",
     "\n",
@@ -78,12 +71,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.\tMesajul va fi pozitionat intr-o matrice cu 7 coloane si numar de linii variabil (in functie de lungimea mesajului introdus)."
+    "The message will be converted into a matrix with 7 columns and a variable number of lines (depending on the length of the entered message)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -111,17 +104,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.\tSe vor calcula bitii de paritate pe fiecare linie si fiecare coloana astfel:\n",
-    "-\tpentru  numar par de 1 pe o linie/coloana  se va adauga un 0 pe ultima coloana/linie;\n",
-    "-\tpentru un numar impar de 1 se va adauga un 1;\n",
-    "-\tbitul semnificativ este bitul din coltul dreapta-jos al matricei.\n",
+    "Parity bits will be calculated on each line and each column as follows:\n",
+    "- for an even number of 1 on a line/column, a 0 will be added on the last column/line;\n",
+    "- for an odd number of 1, a 1 will be added;\n",
+    "- the significant bit is the bit in the lower-right corner of the matrix.\n",
     "\n",
-    "4.\tSe va afisa matricea rezultata."
+    "The resulting matrix will be displayed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -150,21 +143,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5.\tSe va simula coruperea mesajului prin generarea aleatoare a unei pozitii a unui caracter binar al mesajului. In functie de pozitia generata, se va modifica bitul de pe acea pozitie. "
+    "Message corruption will be simulated by randomly generating a position of a binary character of the message. Depending on the generated position, the bit on that position will change."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Corrupted Position: (0, 5)\n",
-      "[[1 0 1 0 1 0 1 1]\n",
-      " [0 1 0 1 1 1 0 0]\n",
+      "Corrupted Position: (1, 4)\n",
+      "[[1 0 1 0 1 1 1 1]\n",
+      " [0 1 0 1 0 1 0 0]\n",
       " [1 1 1 1 0 0 1 1]]\n"
      ]
     }
@@ -190,13 +183,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6.\tDestinatia va reface calculul bitilor de paritate bidimensionala si va identifica bitul corupt.\n",
-    "7.\tDestinatia va afisa apoi pozitia corupta."
+    "Identify the corrupted position using the two-dimensional parity check, and display the corrupted position"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -208,10 +200,10 @@
       " [1 1 1 1 0 0 1 1]]\n",
       "No corrupted message detected.\n",
       "\n",
-      "[[1 0 1 0 1 0 1 1]\n",
-      " [0 1 0 1 1 1 0 0]\n",
+      "[[1 0 1 0 1 1 1 1]\n",
+      " [0 1 0 1 0 1 0 0]\n",
       " [1 1 1 1 0 0 1 1]]\n",
-      "Corrupted message detected at position: (0, 5) \n",
+      "Corrupted message detected at position: (1, 4) \n",
       "\n"
      ]
     }
@@ -248,6 +240,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del message, message_str, n_message, corrupted_message"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -258,29 +259,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.\tSe introduce de la tastatura un sir de caractere binare si un polinom generator (cu coeficienti 0 si 1)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "1.\tSe introduce de la tastatura un sir de caractere binare si un polinom generator (cu coeficienti 0 si 1).\n",
     "2.\tSe fac urmatoarele verificari: sirurile sa fie binare si lungimea mesajului sa fie mai mare decat numarul de coeficienti ai polinomului generator."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 290,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid input.\n",
+      "Message: 10101110101110\n",
+      "Polynomial: 1011\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_binary_input(prompt):\n",
+    "    while True:\n",
+    "        user_input = input(prompt)\n",
+    "        user_input = remove_first_zeros(user_input)\n",
+    "        if binary_characters(user_input):\n",
+    "            return user_input\n",
+    "        else:\n",
+    "            print(\"Invalid input. Please enter binary characters only.\")\n",
+    "\n",
+    "message_str = get_binary_input(\"Enter message: \")\n",
+    "coefficients = get_binary_input(\"Enter Polynomial: \")\n",
+    "\n",
+    "while len(coefficients) >= len(message_str):\n",
+    "    print(\"Polynomial length should be smaller than message length.\")\n",
+    "    coefficients = get_binary_input(\"Enter Polynomial: \")\n",
+    "\n",
+    "print(\"Valid input.\")\n",
+    "print(\"Message:\", message_str)\n",
+    "print(\"Polynomial:\", coefficients)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,10 +309,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 291,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10101110101110000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_degree_of_polynomial(input:str) -> int:\n",
+    "    return len(input) - 1\n",
+    "\n",
+    "degree = get_degree_of_polynomial(coefficients)\n",
+    "\n",
+    "def extend_message(message:str, degree:int) -> str:\n",
+    "    return message + '0' * degree\n",
+    "\n",
+    "message = extend_message(message_str, degree)\n",
+    "print(message)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -306,10 +343,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 292,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00011110101110000\n",
+      "11110101110000\n",
+      "01000101110000\n",
+      "1000101110000\n",
+      "0011101110000\n",
+      "11101110000\n",
+      "01011110000\n",
+      "1011110000\n",
+      "0000110000\n",
+      "110000\n",
+      "011100\n",
+      "11100\n",
+      "01010\n",
+      "1010\n",
+      "0001\n",
+      "1\n",
+      "Final: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def XOR(first, second):\n",
+    "    if first == \"0\" and second == \"1\":\n",
+    "        return \"1\"\n",
+    "    if first == \"1\" and second == \"0\":\n",
+    "        return \"1\"\n",
+    "    return \"0\"\n",
+    "\n",
+    "#  10101110101110\n",
+    "    \n",
+    "def compute_xor(message, coefficients, degree):\n",
+    "    intermediate_results = [] \n",
+    "    while len(message) >= len(coefficients):\n",
+    "        xor_result = ''\n",
+    "        for i in range(degree + 1):\n",
+    "            xor_result += XOR(message[i], coefficients[i])\n",
+    "        message = xor_result + message[degree + 1:]\n",
+    "        intermediate_results.append(message) \n",
+    "        message = remove_first_zeros(message)\n",
+    "        intermediate_results.append(message)\n",
+    "        if len(xor_result) < len(coefficients):\n",
+    "            break\n",
+    "    return xor_result, message, intermediate_results\n",
+    "        \n",
+    "message_c = message\n",
+    "xor_result, remaining_message, intermediate_results = compute_xor(message_c, coefficients, degree)\n",
+    "for result in intermediate_results:\n",
+    "    print(result)\n",
+    "print(\"Final:\", remaining_message)"
+   ]
   },
   {
    "cell_type": "markdown",
