Final message displayed (CRC)

--- a/RC_01.ipynb
+++ b/RC_01.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -52,8 +52,7 @@
     "def validate_input(input_str: str) -> bool:\n",
     "    return len(input_str) % 7 == 0 and binary_characters(input_str)\n",
     "\n",
-    "message_str: str = '10101110101110'\n",
-    "#message_str = input(\"Enter message:\")\n",
+    "message_str = input(\"Enter message:\")\n",
     "message_str = remove_first_zeros(message_str)\n",
     "ok: bool = False\n",
     "\n",
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -148,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Corrupted Position: (1, 4)\n",
+      "Corrupted Position: (1, 5)\n",
       "[[1 0 1 0 1 1 1 1]\n",
-      " [0 1 0 1 0 1 0 0]\n",
+      " [0 1 0 1 1 0 0 0]\n",
       " [1 1 1 1 0 0 1 1]]\n"
      ]
     }
@@ -188,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -201,9 +200,9 @@
       "No corrupted message detected.\n",
       "\n",
       "[[1 0 1 0 1 1 1 1]\n",
-      " [0 1 0 1 0 1 0 0]\n",
+      " [0 1 0 1 1 0 0 0]\n",
       " [1 1 1 1 0 0 1 1]]\n",
-      "Corrupted message detected at position: (1, 4) \n",
+      "Corrupted message detected at position: (1, 5) \n",
       "\n"
      ]
     }
@@ -241,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,13 +258,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.\tSe introduce de la tastatura un sir de caractere binare si un polinom generator (cu coeficienti 0 si 1).\n",
-    "2.\tSe fac urmatoarele verificari: sirurile sa fie binare si lungimea mesajului sa fie mai mare decat numarul de coeficienti ai polinomului generator."
+    "Input (read from keyboard) is a  message (string) of binary characters and a generator polynomial (with coefficients 0 or 1).\n",
+    "Input validation: string must contain only binary characters, and the length of the message must be greater than the number of the coefficients of the generator polynomial. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -273,8 +272,8 @@
      "output_type": "stream",
      "text": [
       "Valid input.\n",
-      "Message: 10101110101110\n",
-      "Polynomial: 1011\n"
+      "Message: 1010\n",
+      "Polynomial: 101\n"
      ]
     }
    ],
@@ -304,19 +303,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.\tSe extinde mesajul cu un numar de 0-uri egal cu gradul polinomului introdus."
+    "The message is extended with a number of 0s equal to the degree of the polynomial (we will consider the degree being the length of the polynomial - 1, since we remove zeros if they exist at the beginning of the coefficients string)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10101110101110000\n"
+      "101000\n"
      ]
     }
    ],
@@ -337,36 +336,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4.\tSe efectueaza succesiv operatii de XOR intre mesajul extins si coeficientii polinomului pana cand lungimea restului obtinut este strict mai mica decat lungimea sirului de coeficienti.\n",
-    "5.\tSe vor afisa rezultatele intermediare ale operatiei de XOR."
+    "Perfom successive XOR operations between the extended message and the coefficients of the generator polynomial until the length of the remaining message is strictly smaller than the length of the coefficients' string. Intermediate results of the XOR operation will be printed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "00011110101110000\n",
-      "11110101110000\n",
-      "01000101110000\n",
-      "1000101110000\n",
-      "0011101110000\n",
-      "11101110000\n",
-      "01011110000\n",
-      "1011110000\n",
-      "0000110000\n",
-      "110000\n",
-      "011100\n",
-      "11100\n",
-      "01010\n",
-      "1010\n",
-      "0001\n",
-      "1\n",
-      "Final: 1\n"
+      "000000\n",
+      "Final: 0\n"
      ]
     }
    ],
@@ -377,8 +360,6 @@
     "    if first == \"1\" and second == \"0\":\n",
     "        return \"1\"\n",
     "    return \"0\"\n",
-    "\n",
-    "#  10101110101110\n",
     "    \n",
     "def compute_xor(message, coefficients, degree):\n",
     "    intermediate_results = [] \n",
@@ -387,7 +368,10 @@
     "        for i in range(degree + 1):\n",
     "            xor_result += XOR(message[i], coefficients[i])\n",
     "        message = xor_result + message[degree + 1:]\n",
-    "        intermediate_results.append(message) \n",
+    "        intermediate_results.append(message)\n",
+    "        if set(message) == {'0'}:\n",
+    "            message = '0'\n",
+    "            break\n",
     "        message = remove_first_zeros(message)\n",
     "        intermediate_results.append(message)\n",
     "        if len(xor_result) < len(coefficients):\n",
@@ -405,16 +389,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6.\tSe executa iarasi operatia de sau exclusiv intre mesajul extins si restul final obtinut, dar pozitionarea restului se va face sub finalul mesajului extins. \n",
-    "7.\tAcest rezultat se va afisa."
+    "XOR operations will be performed between the extended message and the remainder, this time with the last len(remainder) characters of the extended message (before, it was with the first degree + 1 positions). The result will be printed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_remainder(message, remainder):\n",
+    "    message = message[::-1]\n",
+    "    remainder_length = len(remainder)\n",
+    "    message_length = len(message)\n",
+    "    max_length = max(message_length, remainder_length)\n",
+    "    result = ''\n",
+    "    for i in range(max_length):\n",
+    "        if i < remainder_length:\n",
+    "            xor_result = XOR(message[i], remainder[i])\n",
+    "        else:\n",
+    "            xor_result = message[i]\n",
+    "        result += xor_result\n",
+    "    result = result[::-1]\n",
+    "    return result\n",
+    "print(add_remainder(message, remaining_message))"
+   ]
   }
  ],
  "metadata": {
