--- a/RC_01.ipynb
+++ b/RC_01.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Valid input.\n",
-      "10101110101110\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def remove_first_zeros(input_str:str) -> str:\n",
     "    if input_str.startswith('0'):\n",
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -129,9 +120,9 @@
    "source": [
     "def message_matrix(message:ndarray) -> ndarray:\n",
     "    new_mat = np.zeros((message.shape[0] + 1, message.shape[1] + 1), dtype=int)\n",
-    "    new_mat[:-1, :-1] = message\n",
-    "    new_mat[-1, :-1] = new_mat[:-1, :-1].sum(axis=0) % 2\n",
-    "    new_mat[:, -1] = np.sum(new_mat[:, :-1], axis=1) % 2\n",
+    "    new_mat[:-1, :-1] = message # initial message\n",
+    "    new_mat[-1, :-1] = new_mat[:-1, :-1].sum(axis=0) % 2 # parity bits for columns (except the last one) --> fills last row (-1)\n",
+    "    new_mat[:, -1] = np.sum(new_mat[:, :-1], axis=1) % 2 # parity bits for all rows --> fills last column (-1)\n",
     "    return new_mat\n",
     "\n",
     "n_message:ndarray = message_matrix(message)\n",
@@ -147,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
