Added project RC_03

--- a/RC_01.ipynb
+++ b/RC_01.ipynb
@@ -29,7 +29,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid input.\n",
+      "1111111\n"
+     ]
+    }
+   ],
    "source": [
     "def remove_first_zeros(input_str:str) -> str:\n",
     "    if input_str.startswith('0'):\n",
@@ -66,15 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 0 1 0 1 1 1]\n",
-      " [0 1 0 1 1 1 0]]\n"
+      "[[1 1 1 1 1 1 1]]\n"
      ]
     }
    ],
@@ -104,16 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 0 1 0 1 1 1 1]\n",
-      " [0 1 0 1 1 1 0 0]\n",
-      " [1 1 1 1 0 0 1 1]]\n"
+      "[[1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1]]\n"
      ]
     }
    ],
@@ -138,17 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Corrupted Position: (1, 5)\n",
-      "[[1 0 1 0 1 1 1 1]\n",
-      " [0 1 0 1 1 0 0 0]\n",
-      " [1 1 1 1 0 0 1 1]]\n"
+      "Corrupted Position: (0, 2)\n",
+      "[[1 1 0 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1]]\n"
      ]
     }
    ],
@@ -178,22 +184,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 0 1 0 1 1 1 1]\n",
-      " [0 1 0 1 1 1 0 0]\n",
-      " [1 1 1 1 0 0 1 1]]\n",
+      "[[1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1]]\n",
       "No corrupted message detected.\n",
       "\n",
-      "[[1 0 1 0 1 1 1 1]\n",
-      " [0 1 0 1 1 0 0 0]\n",
-      " [1 1 1 1 0 0 1 1]]\n",
-      "Corrupted message detected at position: (1, 5) \n",
+      "[[1 1 0 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1]]\n",
+      "Corrupted message detected at position: (0, 2) \n",
       "\n"
      ]
     }
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -263,8 +267,8 @@
      "output_type": "stream",
      "text": [
       "Valid input.\n",
-      "Message: 1010\n",
-      "Polynomial: 101\n"
+      "Message: 1001000\n",
+      "Polynomial: 100\n"
      ]
     }
    ],
@@ -299,14 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101000\n"
+      "100100000\n"
      ]
     }
    ],
@@ -332,13 +336,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "000100000\n",
+      "100000\n",
       "000000\n",
       "Final: 0\n"
      ]
@@ -385,14 +391,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101000\n"
+      "100100000\n"
      ]
     }
    ],
